k8s/forgeops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgeops
  labels:
    app.kubernetes.io/part-of: forgeops
