k8s/forgeops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgeops
  namespace: forgeops
  labels:
    app.kubernetes.io/name: forgeops
    app.kubernetes.io/part-of: forgeops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgeops
  ports:
    - name: http
      port: 80
      targetPort: http
